// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tag variant danger outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--danger">
      <slot></slot>
    </span>
  </template>
  danger
</mg-tag>
`;

exports[`mg-tag variant danger outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--danger mg-c-tag--outline">
      <slot></slot>
    </span>
  </template>
  danger
</mg-tag>
`;

exports[`mg-tag variant danger soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--danger">
      <slot></slot>
    </span>
  </template>
  danger
</mg-tag>
`;

exports[`mg-tag variant danger soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--danger mg-c-tag--soft">
      <slot></slot>
    </span>
  </template>
  danger
</mg-tag>
`;

exports[`mg-tag variant info outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--info">
      <slot></slot>
    </span>
  </template>
  info
</mg-tag>
`;

exports[`mg-tag variant info outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--info mg-c-tag--outline">
      <slot></slot>
    </span>
  </template>
  info
</mg-tag>
`;

exports[`mg-tag variant info soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--info">
      <slot></slot>
    </span>
  </template>
  info
</mg-tag>
`;

exports[`mg-tag variant info soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--info mg-c-tag--soft">
      <slot></slot>
    </span>
  </template>
  info
</mg-tag>
`;

exports[`mg-tag variant primary outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--primary">
      <slot></slot>
    </span>
  </template>
  primary
</mg-tag>
`;

exports[`mg-tag variant primary outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--outline mg-c-tag--primary">
      <slot></slot>
    </span>
  </template>
  primary
</mg-tag>
`;

exports[`mg-tag variant primary soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--primary">
      <slot></slot>
    </span>
  </template>
  primary
</mg-tag>
`;

exports[`mg-tag variant primary soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--primary mg-c-tag--soft">
      <slot></slot>
    </span>
  </template>
  primary
</mg-tag>
`;

exports[`mg-tag variant secondary outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--secondary">
      <slot></slot>
    </span>
  </template>
  secondary
</mg-tag>
`;

exports[`mg-tag variant secondary outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--outline mg-c-tag--secondary">
      <slot></slot>
    </span>
  </template>
  secondary
</mg-tag>
`;

exports[`mg-tag variant secondary soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--secondary">
      <slot></slot>
    </span>
  </template>
  secondary
</mg-tag>
`;

exports[`mg-tag variant secondary soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--secondary mg-c-tag--soft">
      <slot></slot>
    </span>
  </template>
  secondary
</mg-tag>
`;

exports[`mg-tag variant success outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--success">
      <slot></slot>
    </span>
  </template>
  success
</mg-tag>
`;

exports[`mg-tag variant success outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--outline mg-c-tag--success">
      <slot></slot>
    </span>
  </template>
  success
</mg-tag>
`;

exports[`mg-tag variant success soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--success">
      <slot></slot>
    </span>
  </template>
  success
</mg-tag>
`;

exports[`mg-tag variant success soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--soft mg-c-tag--success">
      <slot></slot>
    </span>
  </template>
  success
</mg-tag>
`;

exports[`mg-tag variant warning outline false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--warning">
      <slot></slot>
    </span>
  </template>
  warning
</mg-tag>
`;

exports[`mg-tag variant warning outline true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--outline mg-c-tag--warning">
      <slot></slot>
    </span>
  </template>
  warning
</mg-tag>
`;

exports[`mg-tag variant warning soft false 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--warning">
      <slot></slot>
    </span>
  </template>
  warning
</mg-tag>
`;

exports[`mg-tag variant warning soft true 1`] = `
<mg-tag>
  <template shadowrootmode="open">
    <span class="mg-c-tag mg-c-tag--soft mg-c-tag--warning">
      <slot></slot>
    </span>
  </template>
  warning
</mg-tag>
`;
